force-app/main/default/objects/Client__c/fields/Client_Number__c.field-meta.xml
<CustomField>
    <fullName>Client_Number__c</fullName>
    <externalId>true</externalId>
    <label>Client Number</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>