force-app/main/default/objects/Client__c/fields/CreatedByAdmin__c.field-meta.xml
<CustomField>
    <fullName>CreatedByAdmin__c</fullName>
    <defaultValue>true</defaultValue>
    <label>CreatedByAdmin</label>
    <type>Checkbox</type>
</CustomField>