force-app/main/default/objects/Client__c/fields/PrimaryKey__c.field-meta.xml
<CustomField>
    <fullName>PrimaryKey__c</fullName>
    <formula>Client_Number__c &amp; &apos;,&apos; &amp; Legal_Advisor__r.Account_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PrimaryKey</label>
    <type>Text</type>
</CustomField>