force-app/main/default/objects/Client__c/validationRules/Client_Number_Must_Be_Read_Only.validationRule-meta.xml
<ValidationRule>
    <fullName>Client_Number_Must_Be_Read_Only</fullName>
    <active>true</active>
    <description>Checks if client number has changed.</description>
    <errorConditionFormula>ISCHANGED(Client_Number__c)</errorConditionFormula>
    <errorMessage>Client number field cannot be changed.</errorMessage>
</ValidationRule>